src/test/deca/codegen/invalid/resultats/var6-ima.res
  ** IMA ** ERREUR ** Ligne 45 : 
    CMP avec op1 : adresse memoire et op2 : indefini
